--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
@@ -35,4 +35,34 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.flip-card {
+  margin: auto;
+  text-align: center;
+}
+.wrapper {
+  padding: 20px;
+}
+
+.start {
+  width: 200px;
+  height: 70px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(0, 195, 255);
+  color: white;
+}
+.next {
+  width: 83vw;
+  height: 20vh;
+  margin-top: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: rgb(89, 120, 93);
+  font-size: 16px;
+  font-weight: 900;
+  color: white;
+  align-items: center;
+  margin:0 auto;
 }
